# To-Do_List

./: .gitignore  README.md  makefile  run.bat
.github/workflows/: tests.yml
backend/: main.py  makefile  pyproject.toml
backend/py/app/: todo_controller.py  todo_model.py
backend/py/db/: db_config.py  db_init.py  db_utils.py
backend/py/utilities/: ports.py
backend/tests/: test-todo-controller.py  test-todo-model.py  test_passing.py  test_todo_controller.py  test_todo_model.py
frontend/: eslint.config.js  jest.setup.js  makefile  package-lock.json  package.json
frontend/__tests__/: check_init.test.js  todo-controller.test.js  todo-model.test.js  todo_controller_model.test.js  todo_view.test.js
frontend/css/: index.css
frontend/html/: index.html
frontend/js/: app.js  renderer.js  todo-controller.js  todo-model.js  todo-view.js
