[project]
name = "backend"
version = "1.0.0"
description = "To-do List Server"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "psycopg[binary]>=3.2.7",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
[tool.ruff]
ignore = ["F401"]
